--- a/app/partials/admin.signin.html
+++ b/app/partials/admin.signin.html
@@ -1,4 +1,4 @@
-<section class="post">
+<section class="post" style="width: 600px">
 	<ol class="breadcrumb">
         <li><a href="#/">SHMCC_PS</a></li>
         <li class="active">Sign In</li>
