--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,8 +1,9 @@
-html, body{
+/*html, body{
     font-size: 100%;
 	background:	#fff;
 	font-family: 'Open Sans', sans-serif;
 }
+*/
 @font-face {
    font-family: 'YesevaOne-Regular';
    src: url(../fonts/YesevaOne-Regular.ttf)format('truetype');
@@ -32,8 +33,8 @@ body a:hover{
     -moz-background-size: cover;
     -o-background-size: cover;
     -ms-background-size: cover;
-	min-height: 400px;
-    max-height: 600px;
+	min-height: 800px;
+    max-height: 800px;
 }
 .banner1{
 	background:url(../images/background.jpg) no-repeat 0px 0px;
@@ -72,20 +73,23 @@ color:#fff!important;
 	overflow:hidden;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-    color: #fff;
-    background:  #803F5F;
+	color: #fff;
+	background-color: transparent;
+    /*background:  #803F5F;*/
 }
 .navbar-default .navbar-nav > li > a {
        color: #fff;
    font-family: 'Open Sans', sans-serif;
-    font-size: 18px;
+    font-size: 16px;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-    color: #fff;
-    background-color: #803F5F;
+	/*color: rgb(10, 1, 1);*/
+	color: #fff;
+	background-color: transparent;
+    /*background-color: #cedb19;*/
 }
 .header-nav {
-    padding: 3em 0 0;
+    padding: 1em 0 0;
 }
 .banner-info-left {
     margin: 3em 0 0;
