--- a/app/partials/admin.signin.html
+++ b/app/partials/admin.signin.html
@@ -25,8 +25,8 @@
 			</div>
 		</div>
 		<div class="form-group" ng-if="!isAuthenticated && currentUser !== null">
-			<div class="col-sm-offset-4 col-sm-10">
-				<label for="inputUsername" class="col-sm-4 control-label">Username</label>	
+			<div class="col-sm-offset-2 col-sm-10">
+				<label for="inputUsername" class="col-sm-4 control-label">{{currentUser}}不存在或者密码错误</label>	
 			</div>
 		</div>
 	</form>
